log/build_2026-03-05_18-51-12/roo_web_bridge/stderr.log
  File "/home/roo/roo_ws/install/roo_web_bridge/lib/python3.12/site-packages/roo_web_bridge/web_bridge_node.py", line 164
    finally:
    ^^^^^^^
SyntaxError: invalid syntax

